--- a/gradle.properties
+++ b/gradle.properties
@@ -7,4 +7,7 @@ org.gradle.jvmargs=-Xmx5g
 org.gradle.caching=true
 # Becomes default in Gradle 9.0
 org.gradle.kotlin.dsl.skipMetadataVersionCheck=false
+# Explicitly added at different versions, due to Kotlin/kotlin-jupyter#462
+kotlin.jupyter.add.api=false
+kotlin.jupyter.add.scanner=false
 kotlin.jupyter.add.testkit=false
