Fix prBodyNotes type
https://developer.mend.io/github/gabrielfeo/develocity-api-kotlin/-/job/df3f3a0c-ae75-46e1-b215-6675b0281030

```
DEBUG: validateReconfigureBranch()
DEBUG: Setting current branch to renovate/reconfigure
DEBUG: latest commit
{
  "branchName": "renovate/reconfigure"
  "latestCommitDate": "2024-07-23T16:56:47+01:00"
}

DEBUG: Validation Errors
{
  "errors": "Configuration option `packageRules[0].prBodyNotes` should be a list (Array)"
}
```

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -17,7 +17,7 @@
     // Add a changelog link to Develocity plugin PRs
     {
       "matchDepNames": ["com.gradle.develocity"],
-      "prBodyNotes": "https://docs.gradle.com/develocity/gradle-plugin/current#release_history"
+      "prBodyNotes": ["https://docs.gradle.com/develocity/gradle-plugin/current#release_history"],
     },
     // Group Kotlin/Jupyter artifact bumps
     {
