--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -10,7 +10,7 @@
   "ignorePaths": [
     "**/test_resources/**",
   ],
-  "dependencyDashboard": false,
+  "dependencyDashboard": true,
   "branchConcurrentLimit": 0,
   "prConcurrentLimit": 0,
   "prHourlyLimit": 0,
